x.x.x (200xxxxx)
================

- Preserve some spaces in equations when output. This will compress multiple
  spaces into a single space, but there will always be at least a single space
  in the output if there is one in the input.
- Fixed bug where SI prefixes entered on their own were treated as a number of
  value zero. This means that "= 1/p" correctly produces an error now.
- Errors and debug messages are now written on stderr.
- The man page is now written in docbook format to allow easier translation.
- Included Basque translations thanks to Mikel Alzibar.
- Included Polish translations thanks to "pp/bs".
- Included further Brazilian Portugese translations thanks to Enrico
  Nicoletto.


1.2.4 (20081114)
================

- Fix bug whereby the precedence wasn't reset correctly after processing a
  pair of brackets. This would lead to problems with calculations where a
  power directly followed a close bracket: [2+3]^3.
- Included Brazilian Portugese translations thanks to Ricardo Ichizo.
- Included French translations thanks to Djalil Oulmane.
- Included Spanish translations thanks to Daniel.


1.2.3 (20080916)
================

- By request, explicit support for square root (sqrt) has been added.


1.2.2 (20080915)
================

- Added support for the "-a" option which prints out all of the available
  operators, functions and constants.


1.2.1 (20080718)
================

- Fixed a string buffer that was being allocated one byte too small and would
  occasionally lead to spurious "invalid operator" errors.


1.2.0 (20080609)
================

- Included Hebrew translations thanks to Yaron and a start at Spanish
  translations thanks to Eduardo Ruiz.
- Support for % (modulus) operator, sin/cos/tan/asin/acos/atan functions and
  pi/exp constants.


1.1.0 (20080601)
================

- Added the "-f filename" option. This will process each line of "filename" as
  though it was typed in at the command line.